--- a/index.css
+++ b/index.css
@@ -131,7 +131,10 @@ html, body {
     font-size: xx-large;
     font-weight: bolder;
 }
-
+.icon1
+{
+    color: black;
+}
 hr {
     margin-top: 100px;
     color: grey;
